# webscraper

./: .gitignore  README.md  agentstack.json  issues.txt  output.txt  pyproject.toml
src/: crew.py  data.json  get_issues.py  knowledge_source_example.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py
