[tool.poetry]
name = "webscraper"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = ["Name <Email>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version="0.2.2.2"}
firecrawl-py = "^1.6.8"

[project.scripts]
webscraper = "webscraper.main:run"
run_crew = "webscraper.main:run"
train = "webscraper.main:train"
replay = "webscraper.main:replay"
test = "webscraper.main:test"